fixed post and comment long word overflow

--- a/src/components/PostView/PostView.module.scss
+++ b/src/components/PostView/PostView.module.scss
@@ -99,6 +99,10 @@ textarea {
   color: var(--black);
 }
 
+.description {
+  word-wrap: break-word;
+}
+
 .descriptionInput {
   padding: 5px;
 }
